--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,18 @@
 body {
   color: var(--primary-text-color);
   background-color: var(--primary-white-color);
+
+  font-family: Montserrat, sans-serif;
+  letter-spacing: -0.015em;
+  font-size: 18px;
+  line-height: 1.67;
 }
 
 .logo {
   color: var(--title-text-color);
+  font-family: Comfortaa, cursive;
+  font-size: 28px;
+  line-height: 1.14;
 }
 
 .logo:hover,
@@ -29,6 +37,9 @@ body {
 
 .site-nav .link {
   color: var(--accent-text-color);
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 1.2;
 }
 
 .site-nav .link:hover,
@@ -48,24 +59,30 @@ body {
 
 .hero-title {
   color: var(--title-text-color);
+  font-weight: 400;
+  font-size: 56px;
+  line-height: 1.43;
+  text-align: center;
 }
 
 /* Section */
 
 .section-title {
   color: var(--title-text-color);
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 1.5;
+  text-align: center;
 }
 
 /* Features section */
 
-.feature-list .title {
-  color: var(--title-text-color);
-}
-
-/* Examples section */
-
+.feature-list .title,
 .work-list .title {
   color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.5;
 }
 
 /* Button */
@@ -73,6 +90,10 @@ body {
 .button {
   color: var(--title-text-color);
   background-color: var(--primary-white-color);
+
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 1.2;
 }
 
 .button.primary {
