--- a/css/compendium.css
+++ b/css/compendium.css
@@ -23,9 +23,9 @@ body {
 }
 
 .container {
-  width: 1200px;
-  /* margin-left: auto;
-  margin-right: auto; */
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin: 0 auto;
 }
 
