--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
   --title-text-color: #000000;
   --accent-text-color: #18a0fb;
   --primary-white-color: #ffffff;
+  --secondary-bg-color: #f5f5f5;
 }
 
 body {
@@ -21,10 +22,21 @@ body {
   line-height: 1.67;
 }
 
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1140px;
+  padding-left: 20px;
+  padding-right: 20px;
+  outline: 2px solid tomato;
+}
+
+/* Logo */
+
 .logo {
   color: var(--title-text-color);
-
   font-family: Comfortaa, cursive;
+
   font-size: 28px;
   line-height: 1.14;
   text-decoration: none;
@@ -33,6 +45,11 @@ body {
 .logo:hover,
 .logo:focus {
   color: var(--accent-text-color);
+}
+
+/* Page header */
+
+.page-header {
 }
 
 /* Site nav */
@@ -57,46 +74,105 @@ body {
 
 .list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 /* Hero section */
+.hero {
+  text-align: center;
+}
 
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 40px;
+
   color: var(--title-text-color);
+
   font-weight: 400;
   font-size: 56px;
   line-height: 1.43;
-  text-align: center;
 }
 
 /* Section */
 
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.section.no-padding {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .section-title {
+  margin-top: 0;
+  margin-bottom: 60px;
+
   color: var(--title-text-color);
+
   font-weight: 400;
   font-size: 48px;
   line-height: 1.5;
+}
+
+.section-title.centered {
   text-align: center;
 }
 
 .section-description {
+  margin-top: 0;
+  margin-bottom: 80px;
+
   font-size: 36px;
   line-height: 1.39;
+}
+
+.section-description.centered {
+  text-align: center;
 }
 
 /* Features section */
 
 .feature-list .title,
 .work-list .title {
+  margin-top: 0;
+  margin-bottom: 24px;
+
   color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 24px;
   line-height: 1.5;
 }
 
+.feature-list p {
+  margin-top: 0;
+  margin-bottom: 32px;
+}
+
+/* Works section */
+
+.work-list > .item {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  background-color: var(--primary-white-color);
+}
+
+.work-list > .item:nth-child(2n) {
+  background-color: var(--secondary-bg-color);
+}
+
 /* Button */
 
 .button {
+  display: inline-block;
+  border: 1px solid transparent;
+  min-width: 130px;
+  border-radius: 6px;
+  padding: 11px 34px;
+
   color: var(--title-text-color);
   background-color: var(--primary-white-color);
 
@@ -104,6 +180,7 @@ body {
   font-size: 15px;
   line-height: 1.2;
   text-decoration: none;
+  text-align: center;
 }
 
 .button.primary {
@@ -112,6 +189,20 @@ body {
 }
 
 .button.secondary {
+  border-color: var(--accent-text-color);
+
   color: var(--accent-text-color);
   background-color: var(--primary-white-color);
+}
+
+/* Footer */
+
+.copyright {
+  font-size: 15px;
+  line-height: 1.6;
+}
+
+.social > .label {
+  font-size: 15px;
+  line-height: 1.6;
 }
