--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ body {
 }
 
 .site-nav > .item {
-  outline: 1px solid teal;
+  /* outline: 1px solid teal; */
 }
 
 .site-nav > .item + .item {
@@ -273,21 +273,44 @@ body {
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  /* margin-top: -30px;
-  margin-left: -30px; */
-  background-color: teal;
+
+  padding: 0;
+  margin: 0;
+  margin-left: -30px;
+  margin-top: -30px;
+
+  /* margin: -15px; */
+
+  /* background-color: teal; */
 }
 
 .flex-element {
-  /* flex-basis: calc(100% / 3 - 60px);
+  flex-basis: calc((100% / 3) - 30px);
+  margin-left: 30px;
   margin-top: 30px;
-  margin-left: 30px; */
 
-  width: 380px;
-  background-color: tomato;
+  /* width: 380px;
+  margin: 15px; */
+
+  /* width: calc((100% - 60px) / 3); */
   /* margin-right: 30px; */
+  /* margin-bottom: 30px; */
+
+  background-color: tomato;
 }
+
+/* .flex-element:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+
+.flex-element:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+} */
+
+/* Alternative */
+/* .flex-element:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+} */
 
 /* .flex-element:nth-child(3n) {
   margin-right: 0;
