--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1140px;
+  width: 1440px;
   padding-left: 20px;
   padding-right: 20px;
   outline: 2px solid tomato;
@@ -173,6 +173,10 @@ body {
   text-align: center;
 }
 
+.section-description.no-margin {
+  margin: 0;
+}
+
 /* Features section */
 
 .feature-list {
@@ -187,7 +191,7 @@ body {
   margin-top: 60px;
   margin-left: 148px;
 
-  outline: 1px solid teal;
+  /* outline: 1px solid teal; */
 }
 
 .feature-list .title,
@@ -210,13 +214,59 @@ body {
 /* Works section */
 
 .work-list > .item {
+  display: flex;
+  align-items: center;
   padding-top: 80px;
   padding-bottom: 80px;
   background-color: var(--primary-white-color);
 }
 
 .work-list > .item:nth-child(2n) {
+  flex-direction: row-reverse;
   background-color: var(--secondary-bg-color);
+}
+
+.work-list > .item:nth-child(2n + 1) > .content {
+  margin-left: 84px;
+}
+
+.work-list > .item:nth-child(2n) > .content {
+  margin-right: 84px;
+}
+
+/* Clients section */
+
+.client-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -32px -42px;
+  width: 1028px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.client-list > .item {
+  margin: 32px 42px;
+}
+
+/* SignUp section */
+
+.reg {
+  display: flex;
+}
+
+.reg-list {
+  display: flex;
+  align-items: center;
+  margin-left: 84px;
+}
+
+.reg-list .button {
+  white-space: nowrap;
+}
+
+.reg-list .button:not(:last-child) {
+  margin-right: 45px;
 }
 
 /* Button */
@@ -274,23 +324,23 @@ body {
   display: flex;
   flex-wrap: wrap;
 
-  padding: 0;
+  /* padding: 0;
   margin: 0;
   margin-left: -30px;
-  margin-top: -30px;
+  margin-top: -30px; */
 
-  /* margin: -15px; */
+  margin: -15px;
 
-  /* background-color: teal; */
+  background-color: teal;
 }
 
 .flex-element {
-  flex-basis: calc((100% / 3) - 30px);
+  /* flex-basis: calc((100% / 3) - 30px);
   margin-left: 30px;
-  margin-top: 30px;
+  margin-top: 30px; */
 
-  /* width: 380px;
-  margin: 15px; */
+  width: 380px;
+  margin: 15px;
 
   /* width: calc((100% - 60px) / 3); */
   /* margin-right: 30px; */
