--- a/css/04-card-overlay.css
+++ b/css/04-card-overlay.css
@@ -1,26 +1,23 @@
 .product {
   width: 370px;
+  margin-left: auto;
+  margin-right: auto;
 
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
 }
 
-.product:hover .product-actions {
-  opacity: 1;
-}
-
 .product-thumb {
   position: relative;
+
+  overflow: hidden;
 }
 
 .product-thumb:hover::before {
   opacity: 1;
 }
 
-.product-thumb::before {
-  display: inline-block;
-  content: '';
-
+.product-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -28,7 +25,16 @@
   height: 100%;
   background-color: rgba(255, 165, 0, 0.5);
 
+  /* transform: translateX(-100%); */
+  transform: scale(0);
   opacity: 0;
+  transition: transform 250ms var(--timing-function), opacity 250ms var(--timing-function);
+}
+
+.product:hover .product-overlay {
+  /* transform: translateX(0); */
+  transform: scale(1);
+  opacity: 1;
 }
 
 .product-meta {
@@ -46,15 +52,20 @@
 }
 
 .product-actions {
+  outline: 3px solid orange;
   position: absolute;
+  display: flex;
+
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 
-  outline: 3px solid orange;
-  display: flex;
-
   opacity: 0;
+  transition: opacity 250ms var(--timing-function) 250ms;
+}
+
+.product:hover .product-actions {
+  opacity: 1;
 }
 
 .product-actions .icon {
