--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,88 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 1.5;
   color: #2a2a2a;
 }
 
 textarea {
   resize: none;
+}
+
+.form {
+  width: 600px;
+  outline: 1px solid tomato;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+}
+
+.form-field {
+  /* outline: 1px solid teal; */
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.form-field label {
+  margin-bottom: 5px;
+}
+
+.form-field input {
+  margin: 0;
+  padding: 10px 20px;
+  border-radius: 3px;
+  border: 1px solid #2a2a2a;
+}
+
+.form-field input::placeholder {
+  color: #2a2a2a;
+}
+
+.group {
+  margin-bottom: 20px;
+}
+
+.group-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.topic-options,
+.experience-options {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.topic-options li {
+  display: flex;
+  align-items: center;
+}
+
+.topic-options input[type='checkbox'] {
+}
+
+.topic-options label {
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.policy {
+  flex-direction: row;
+  align-items: center;
+}
+
+.policy label {
+  margin-left: 5px;
+}
+
+.form .date {
+  border-width: 3px;
+  border-radius: 10px;
+  padding: 20px 30px;
+}
+
+.form .comment {
+  padding: 8px;
 }
