--- a/css/01-crossbrowser.css
+++ b/css/01-crossbrowser.css
@@ -6,16 +6,14 @@
 
 .form-field {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .form-label {
   position: absolute;
   top: 50%;
-  left: 30px;
+  left: 40px;
   transform: translateY(-50%);
-  background-color: teal;
-  color: #fff;
 
   transition: transform 250ms ease-in-out;
 }
@@ -27,14 +25,42 @@
   padding-left: 40px;
   font: inherit;
   border-radius: 3px;
-  border: 1px solid #2a2a2a;
+  border: 1px solid transparent;
+}
+
+.form-input:focus {
+  outline: 1px solid palevioletred;
+}
+
+.form-input:not(:placeholder-shown) {
+  background-color: #f9f9fd;
 }
 
 .form-input:focus + .form-label,
 .form-input:not(:placeholder-shown) + .form-label {
+  color: palevioletred;
   transform: translateY(-50px);
 }
 
 .form-input:placeholder-shown {
+  background-color: #f9f9fd;
+}
+
+.icon {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+
+  display: inline-block;
+  width: 20px;
+  height: 20px;
   background-color: #ccc;
+
+  transition: background-color 250ms ease;
+}
+
+.form-input:focus ~ .icon,
+.form-input:not(:placeholder-shown) ~ .icon {
+  background-color: palevioletred;
 }
