--- a/css/main.css
+++ b/css/main.css
@@ -12,4 +12,16 @@
 
 .icon-twitter {
   background-image: url("../images/twitter.svg");
+}
+
+.icon-html {
+  background-image: url("../images/html.svg");
+}
+
+.icon-css {
+  background-image: url("../images/css.svg");
+}
+
+.icon-js {
+  background-image: url("../images/js.svg");
 }/*# sourceMappingURL=main.css.map */
