--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -8,3 +8,11 @@
   border-top: 1px $type $color;
   border-bottom: 1px $type $color;
 }
+
+@mixin generateIcons($iconList) {
+  @each $iconName in $iconList {
+    .icon-#{$iconName} {
+      background-image: url("../images/#{$iconName}.svg");
+    }
+  }
+}
