--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,5 +1,12 @@
 .features-set {
   @extend %list;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -10px;
+    margin-left: -10px;
+  }
 }
 
 .features-item {
@@ -8,6 +15,22 @@
   padding-bottom: 20px;
   color: #fff;
   font-size: 32px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 10px);
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+
+  @media screen and (min-width: 1140px) {
+    flex-basis: calc(100% / 3 - 10px);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .features-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 $colors: "#F44336", "#3F51B5", "#4CAF50", "#00BCD4", "#E91E63", "#009688";
