--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.features-set, .reviews-set {
+.reviews-set, .features-set {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -11,7 +11,7 @@
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
+  font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
   color: #2a2a2a;
   background-color: #fff;
   line-height: 1.3;
@@ -23,19 +23,16 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
 }
-
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
   }
 }
-
 @media screen and (min-width: 1140px) {
   .container {
     width: 1140px;
@@ -96,23 +93,20 @@ body {
   color: #fff;
   font-size: 32px;
 }
-
 @media screen and (min-width: 768px) {
   .features-item {
-    -ms-flex-preferred-size: calc(100% / 2 - 10px);
-        flex-basis: calc(100% / 2 - 10px);
+    -ms-flex-preferred-size: calc((100% - 20px) / 2);
+        flex-basis: calc((100% - 20px) / 2);
     margin-top: 10px;
     margin-left: 10px;
   }
 }
-
 @media screen and (min-width: 1140px) {
   .features-item {
-    -ms-flex-preferred-size: calc(100% / 3 - 10px);
-        flex-basis: calc(100% / 3 - 10px);
+    -ms-flex-preferred-size: calc((100% - 30px) / 3);
+        flex-basis: calc((100% - 30px) / 3);
   }
 }
-
 @media screen and (max-width: 767px) {
   .features-item:not(:last-child) {
     margin-bottom: 10px;
@@ -209,5 +203,4 @@ body {
 
 .contacts {
   outline: 1px solid orange;
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
