--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.reviews-set, .features-set {
+.features-set, .reviews-set {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -11,7 +11,7 @@
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
+  font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
   color: #2a2a2a;
   background-color: #fff;
   line-height: 1.3;
@@ -23,16 +23,19 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
 }
+
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
   }
 }
+
 @media screen and (min-width: 1140px) {
   .container {
     width: 1140px;
@@ -40,6 +43,7 @@ body {
 }
 
 .page-header {
+  position: relative;
   border-bottom: 2px solid black;
 }
 
@@ -56,12 +60,55 @@ body {
   min-height: 80px;
 }
 
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 400px;
+  background-color: palegoldenrod;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.menu-container.is-open {
+  display: block;
+}
+
 .company-logo {
   padding: 10px;
   font-size: 20px;
   font-weight: 500;
   background-color: #03a9f4;
   color: #fff;
+}
+
+.company-logo:hover, .company-logo:focus {
+  background-color: teal;
 }
 
 .section {
@@ -85,6 +132,7 @@ body {
     margin-left: -10px;
   }
 }
+
 @media screen and (min-width: 1140px) {
   .features-set {
     margin-top: -20px;
@@ -99,22 +147,25 @@ body {
   color: #fff;
   font-size: 32px;
 }
+
 @media screen and (min-width: 768px) {
   .features-item {
-    -ms-flex-preferred-size: calc((100% - 20px) / 2);
-        flex-basis: calc((100% - 20px) / 2);
+    -ms-flex-preferred-size: calc((100% - 2 * 10px) / 2);
+        flex-basis: calc((100% - 2 * 10px) / 2);
     margin-top: 10px;
     margin-left: 10px;
   }
 }
+
 @media screen and (min-width: 1140px) {
   .features-item {
-    -ms-flex-preferred-size: calc((100% - 60px) / 3);
-        flex-basis: calc((100% - 60px) / 3);
+    -ms-flex-preferred-size: calc((100% - 3 * 20px) / 3);
+        flex-basis: calc((100% - 3 * 20px) / 3);
     margin-top: 20px;
     margin-left: 20px;
   }
 }
+
 @media screen and (max-width: 767px) {
   .features-item:not(:last-child) {
     margin-bottom: 10px;
@@ -160,6 +211,7 @@ body {
     margin-left: -10px;
   }
 }
+
 @media screen and (min-width: 1140px) {
   .reviews-set {
     margin-top: -20px;
@@ -168,8 +220,8 @@ body {
 }
 
 .reviews-item {
-  -ms-flex-preferred-size: calc((100% - 30px) / 3);
-      flex-basis: calc((100% - 30px) / 3);
+  -ms-flex-preferred-size: calc((100% - 3 * 10px) / 3);
+      flex-basis: calc((100% - 3 * 10px) / 3);
   margin-top: 10px;
   margin-left: 10px;
   padding: 40px;
@@ -177,15 +229,17 @@ body {
   color: #fff;
   font-size: 48px;
 }
+
 @media screen and (min-width: 768px) and (max-width: 1139px) {
   .reviews-item {
     border: 20px solid rgba(0, 0, 0, 0.25);
   }
 }
+
 @media screen and (min-width: 1140px) {
   .reviews-item {
-    -ms-flex-preferred-size: calc((100% - 60px) / 3);
-        flex-basis: calc((100% - 60px) / 3);
+    -ms-flex-preferred-size: calc((100% - 3 * 20px) / 3);
+        flex-basis: calc((100% - 3 * 20px) / 3);
     margin-top: 20px;
     margin-left: 20px;
     font-size: 64px;
@@ -245,4 +299,5 @@ body {
 
 .contacts {
   outline: 1px solid orange;
-}/*# sourceMappingURL=main.css.map */
+}
+/*# sourceMappingURL=main.css.map */
