--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@ body {
   line-height: 1.3;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .container {
   padding-left: 15px;
   padding-right: 15px;
@@ -256,6 +260,38 @@ body {
 
 .reviews-item:nth-child(3) {
   background-color: #7B1FA2;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 50px 30px;
+  overflow-y: scroll;
+}
+
+.backdrop.is-hidden {
+  display: none;
+}
+
+.modal {
+  padding: 20px;
+  background-color: #fff;
+}
+
+@media screen and (min-width: 600px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    max-width: 500px;
+    width: 100%;
+  }
 }
 
 .menu-button {
