--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -4,6 +4,10 @@
   padding: 0;
   border: none;
   background-color: transparent;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .menu-button .icon-cross {
@@ -19,10 +23,30 @@
 }
 
 .menu-container {
+  // height: 400px;
+
   background-color: palegoldenrod;
   padding: 20px;
   text-align: center;
   font-size: 20px;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+
+    &.is-open {
+      display: block;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 1;
+  }
 }
 
 .navigation,
