--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,35 +1,35 @@
-// .mobile-menu {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background-color: rgba(0, 0, 0, 0.5);
-//   z-index: 999;
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(#000, 0.5);
 
-//   opacity: 0;
-//   visibility: hidden;
-//   pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 
-//   transition: opacity 250ms linear, visibility 250ms linear;
-// }
+  transition: opacity 250ms linear, visibility 250ms linear;
 
-// .mobile-menu.is-open {
-//   opacity: 1;
-//   visibility: visible;
-//   pointer-events: initial;
-// }
+  z-index: 999;
 
-// .mobile-menu .content {
-//   height: 100%;
-//   background-color: #fff;
-//   width: 70%;
+  &.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: initial;
+  }
+}
 
-//   transform: translateX(-100%);
+.content {
+  width: 70%;
+  height: 100%;
+  background-color: #fff;
 
-//   transition: transform 250ms linear 250ms;
-// }
+  transform: translateX(-100%);
+  transition: transform 250ms linear 150ms;
 
-// .mobile-menu.is-open .content {
-//   transform: translateX(0);
-// }
+  .mobile-menu.is-open & {
+    transform: translateX(0);
+  }
+}
